<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- ZÁKLADNÍ INFORMACE O PROJEKTU -->
    <modelVersion>4.0.0</modelVersion>

    <!-- Používáme Spring Boot jako rodičovský projekt -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <relativePath/>
    </parent>

    <!-- Identifikace projektu -->
    <groupId>cz.hackmeifyoucan</groupId>
    <artifactId>backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Hack Me If You Can</name>
    <description>Backendová část projektu Hack Me If You Can (Spring Boot)</description>

    <properties>
        <!-- Verze Javy používaná v projektu -->
        <java.version>21</java.version>
    </properties>


    <!-- ZÁVISLOSTI (DEPENDENCIES) -->
    <dependencies>

        <!-- Spring Boot Actuator - monitoring (volitelně) -->
        <!-- <dependency> -->
        <!-- <groupId>org.springframework.boot</groupId> -->
        <!-- <artifactId>spring-boot-starter-actuator</artifactId> -->
        <!-- </dependency> -->

        <!-- OpenAPI/Swagger UI - generuje interaktivní API dokumentaci -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.7.0</version>
        </dependency>

        <!-- Spring Boot Validation - validace vstupních dat -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Spring Boot Web Starter - základ pro REST API -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Spring Boot DevTools - automatický restart v dev prostředí -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- Spring Boot Test - závislosti pro testování (JUnit/MockMvc) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Spring Data JPA - práce s entitami a databází -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- PostgreSQL JDBC driver -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- H2 databáze - ponecháno pouze pro testy (pokud nějaké používají embedded DB) -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>


    </dependencies>


    <!-- BUILD - NASTAVENÍ KOMPILACE -->
    <build>
        <plugins>

            <!-- Maven Compiler Plugin - zajišťuje kompilaci kódu -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <!-- Spring Boot Maven Plugin - spouštění aplikace a tvorba JAR -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

        </plugins>
    </build>

</project>
